# dashuki

./: .clangd  .env.sample  .gitignore  CMakeLists.txt  Makefile  README.md  pi-toolchain.cmake
src/: comms.c  comms.h  constants.c  constants.h  interface.c  interface.h  main.c  menu.c  menu.h  save.c  save.h  state.c  state.h  utils.c  utils.h
src/gui/: dashboard.c  dashboard.h  diag_params.c  diag_params.h  flags.c  flags.h  fuel.c  fuel.h  guidelines.c  guidelines.h  menu.c  menu.h  odometer.c  odometer.h  rpm.c  rpm.h  speed.c  speed.h  temps.c  temps.h  throttle.c  throttle.h
